--- a/曙光的乐园(1).md
+++ b/曙光的乐园(1).md
@@ -1097,8 +1097,19 @@ CHOICE
 陈诚 就让我来告诉您，这个白家背后的一些东西
 
 陈诚 关于已经被现代人遗忘的，某个魔女的存在
-111111111111111
-222222222222222
+#17
+陈诚 大概70年前左右，白家刚发家那会儿吧，那时候的白家还是依靠行商发家的暴发户，他们最开始从事的是茶饮店，跟现在的白家感觉很不一样。
 
+陈诚 当时的白家家主在道上无依无靠，全凭自己摸爬滚打，硬是闯出了一条路，打响了白家商阜的名号
+
+陈诚 发达以后，家主便在一座风光优美的山上包下了一大块地，修建了第一座宅邸，就此隐居在此，这也成了现在的白家老宅
+
+陈诚 自从家主创出了一片天后，受他的影响，白家的后辈们也一个接一个地闯了出去，逐渐把白家发展成了如今的商业超级帝国
+
+陈诚 因此，当现任白家家主，白知瑞突然宣布要将公司转型为专攻AI的科技公司时，众人是很吃惊的
+
+陈诚 虽然在这个世道，AI火遍天下，往这方面投资太为正常了，但是不管怎么说，将主公司彻底转为专攻AI，并且大面积裁员，重新招募员工的做法还是过于激进了。
+
+陈诚 白知瑞作为海归博后，精修了大量AI专业课程，身上自是积累了丰富的知识，
 
 ![money](曙光的乐园/money.png)
