--- a/曙光的乐园(1).md
+++ b/曙光的乐园(1).md
@@ -1097,19 +1097,185 @@ CHOICE
 陈诚 就让我来告诉您，这个白家背后的一些东西
 
 陈诚 关于已经被现代人遗忘的，某个魔女的存在
-#17
-陈诚 大概70年前左右，白家刚发家那会儿吧，那时候的白家还是依靠行商发家的暴发户，他们最开始从事的是茶饮店，跟现在的白家感觉很不一样。
+# 17
+陈诚 大概70年前左右，白家刚发家那会儿吧，那时候的白家还是默默无名的小手艺坊，他们最开始从事的是人偶店，靠着演演人偶戏过日子，跟现在的白家感觉很不一样。
 
-陈诚 当时的白家家主在道上无依无靠，全凭自己摸爬滚打，硬是闯出了一条路，打响了白家商阜的名号
+陈诚 尽管没什么名气，但白家的人偶手艺可是真家伙，是白家世世代代传承下来的独门绝技
+
+陈诚 然而，当时的白家家主厌倦了这一切，他放弃祖辈传下来的这一套技艺，打算成立商阜远走行商
+
+陈诚 白家的长辈当然无法接受如此任性的决定，为此，他和全家大吵了一架，从此被逐出远门，开始了浪迹天涯的生活
+
+陈诚 商阜以珍玩交易为主要业务，从各地搜集珍贵的草药，珠宝等到集市交易，从而赚取利润
+
+陈诚 他在道上无依无靠，全凭自己摸爬滚打，硬是闯出了一条路，打响了白家商阜的名号
+
+陈诚 由于白家家主优秀的商业头脑，事业一帆风顺，几乎没有遇到任何阻碍地越做越大，如今仍被视为一代商业奇迹
 
 陈诚 发达以后，家主便在一座风光优美的山上包下了一大块地，修建了第一座宅邸，就此隐居在此，这也成了现在的白家老宅
 
-陈诚 自从家主创出了一片天后，受他的影响，白家的后辈们也一个接一个地闯了出去，逐渐把白家发展成了如今的商业超级帝国
+陈诚 自从家主创出了一片天后，受他的影响，后代们也一个接一个地闯了出去，逐渐把白家发展成了如今的商业超级帝国
+
+陈诚 当然后代指的是家主的孩子们，那些白家的前辈到死也不承认这个白家商埠
+
+陈诚 直到10年前，白家都还是珍玩交易领域的绝对领头羊，同时还涉及了服务业等等很多其他领域，是名副其实的商业大亨
 
 陈诚 因此，当现任白家家主，白知瑞突然宣布要将公司转型为专攻AI的科技公司时，众人是很吃惊的
 
 陈诚 虽然在这个世道，AI火遍天下，往这方面投资太为正常了，但是不管怎么说，将主公司彻底转为专攻AI，并且大面积裁员，重新招募员工的做法还是过于激进了。
 
-陈诚 白知瑞作为海归博后，精修了大量AI专业课程，身上自是积累了丰富的知识，
+陈诚 他把那些子公司卖的卖，转型的转型，并且把很多元老级别的员工全部解雇，把前几代人留下的老底基本都交光了
+
+陈诚 为此，他面临了很多抗议，甚至是法律问题，即便如此他还是没有停下暴走的计划
+
+陈诚 这个计划刚公开的时候，白家元老们气得脸都要歪了，因为白知瑞根本没找他们商量
+
+陈诚 他们在公司会议上怒斥白知瑞败家子，把文件甩他脸上，拂袖而去
+
+陈诚 然而，没过多久，这些声讨声突然约定好的一般消失了
+
+陈诚 此后，这些人仿佛换了副面孔般，又纷纷站出来表示支持转型计划
+
+陈诚 后面，转型计划发展得很顺利，瘦死的骆驼比马大，白家没过几年就一跃成了科技巨头
+
+陈诚 尽管事情闹得很大，白知瑞本人却从不在媒体上公开发声，仿佛是对舆论毫不在意一般
+
+陈诚 如今，正如你知道的那样，白知瑞在一家偏僻的研究所里当他的所长，继续推进着AI的研究
+
+专舟 好了，听你说了这么多，魔女在哪，而且这些信息好像都能在viki上查的到吧，还需要听你废话吗。
+
+陈诚 您先别急，这只是为了故事的完整性而加入的前情提要罢了，重要的在后面
+
+陈诚 这段故事有几个奇怪的地方，想必您也发现了
+
+陈诚 首先，一个让人好奇的地方是，70年前的白家家主是怎么一个人闯出来的
+
+陈诚 照理说，如果要从事珍玩交易，人脉是必不可少的，不论一个人再怎么优秀，也很难做到短时间内如此发达，以至于被称为商业奇迹
+
+陈诚 再次，如日中天的家主，为何早早放弃事业而隐居起来
+
+陈诚 还有就是最神奇的点，在白知瑞主张转型时，为什么原本反对他的人突然全部转而支持他了。
+
+说完，陈诚挪动身子将头凑到我身边，低声说道
+
+陈诚 据说70年前的白家家主之所以突然放弃家传手艺开始行商，是因为他得到了某样“绝对不可能出现在世上的东西”
+
+陈诚 这样东西是如此神奇，以至于见过它的人无不折服
+
+陈诚 然而，一旦离开这东西，就再也记忆不起它的样貌，只觉得宛如脱胎换骨一般舒畅
+
+陈诚 传说，白家家主与魔女交易，得到了这样东西
+
+陈诚 交易的具体内容谁也不知道，总之结果就是，白家迅速起家，一跃成为商业大亨
+
+陈诚 而家主在如日中天之际突然隐居起来，也许也跟这个交易有关
+
+陈诚 有一种说法是，白家家主在躲避魔女的追杀
+
+陈诚 因为他打破了交易的规则，做了不能做的事
+
+陈诚 但是，尽管他小心翼翼地把自己藏到深山里，事情还是暴露了
+
+陈诚 白家家主有一个可爱的女儿，是他隐居之后他的夫人诞下的，他的宝物
+
+陈诚 在女儿还小的时候，过着的还是天堂般的生活，他的父亲母亲都很爱她，什么都满足她
+
+陈诚 然而，突然在某一天，家主仿佛变了个人一般，开始以冷脸相对
+
+陈诚 本来什么都满足她，陪她玩的父亲，突然间变得冷漠无情了
+
+陈诚 她像以往一样撒娇，却换来父亲的一记耳光
+
+陈诚 她从来没有见过这样的父亲，于是她伤心欲绝，将自己关在了房间里
+
+陈诚 没过多久，她的母亲生病去世了，父亲变得愈加乖戾，动不动对家中的仆人又打又骂，对待女儿更是冷漠到了极点
+
+陈诚 他开始禁止女儿出房间，一日三餐以及所有的活动都在房间中完成
+
+陈诚 这样的白色恐怖持续了大概1年后，奇怪的事情发生了
+
+陈诚 某一天，某位佣人在打扫厨房的时候，突然见到小姐从厨房门口啪嗒啪嗒跑过来缠着她一起玩
+
+陈诚 已经习惯了闭门不出以泪洗面的小姐的这位佣人，见到好像回到了从前的活泼的小姐后，顿时觉得开心无比
+
+陈诚 那一天，家主正好有事出门，不在宅邸，于是佣人就瞒着其他人偷偷地和小姐玩了一阵
+
+陈诚 晚上，当她和其她佣人说起这事的时候，却奇怪地发现，她们一起玩耍的那个时间点，另一位佣人正在小姐的房间陪她一起念书
+
+陈诚 据另一位佣人所说，和他一起念书的小姐还是神情忧郁，无精打采的
+
+陈诚 这件事在佣人之间传了一阵，但最终被当作那位打扫厨房的佣人过劳出现的幻觉
+
+陈诚 然而，又过了段时间，又有一位佣人见到了活泼模式的小姐，缠着她一起玩
+
+陈诚 当然，那个点小姐并没有出房间，也并没有很活泼
+
+陈诚 这下，没人敢把这事当作幻觉了，大家都觉得闹鬼了
+
+陈诚 终于，当活泼的小姐第三次出现时，被找的那位佣人没忍住，将她带到了小姐的房间，让两人面对面的见到了对方
+
+陈诚 这时，活泼的小姐突然像烂泥一般化开，变成了某种不可名状的生物，将在宅邸的所有人全部杀死了
+
+陈诚 当时的家主正好出差因此躲过了一劫，当他回到宅邸之中时，只见到遍地的尸体和鲜血
+
+等等，仔细想想还是很奇怪
+
+专舟 等等，照你所说，白家被这个生物给灭门了，那怎么会有这么多的白家后代，这也太不可信了
+
+专舟 再说，要是当时在场的人都被杀了，那你怎么会知道这么详细的过程
+
+陈诚 没错，因此有种说法是白家家主从外面又聚拢了一批人，冠上了白家的名号，继续维持着他的事业
+
+陈诚 关于为什么会有这么细节的版本流传下来，我也不是很清楚，当然，这段传言的真实性是非常存疑的
+
+陈诚 然而，最近有人似乎目击到了跟这段传闻非常类似的情景，使得我们不得不重新开始思考这段故事背后的东西
+
+陈诚 有人据说目击到了本不应该存在的东西
+
+陈诚 那便是活泼的筱娅小姐
+
+陈诚 并且在她不可能外出的时段
+
+我的背后早已冰凉无比
+
+然而，面对陈诚，我不能表现出太多的动摇
+
+这段传言虽然真实性非常存疑，但它绝对存在真实的部分
+
+因为这里面的一个现象，正在我身边如实发生
+
+陈诚 并且，仔细对比白知瑞和当时的白家家主，可以发现他们在做的事几乎完全一致
+
+陈诚 我们认为这个不可名状的生物，姑且称做魔女，现在就在身边
+
+陈诚 为了避免出现几十年前的惨剧，我们打算先下手为强，将魔女干掉
+
+陈诚 哪知那天晚上让她跑了
+
+专舟 是，是吗，那真是太遗憾了
+
+我干笑了几声，已经不知道该怎么应付了
+
+陈诚 专舟先生，这件事本来不能和外人透露，但是我认为小姐对你印象是很好的，所以魔女说不定会跑到你那边去，所以才和您说了这事
+
+陈诚 这是我的独断，如果您把今天我说的事泄露出去，我们都得死
+
+陈诚 我希望您能协助我，这样，我也会为您在白家的行事提供方便，不需要您做出什么特殊的行动，只需正常在白家工作便可
+
+陈诚 如果您真的遇到魔女，希望您能第一时间告诉我
+
+陈诚 那天破您家的门，是因为我们看着魔女往您那边逃去了，我将全款赔偿
+
+说罢，陈诚向我深深地低下了头
+
+陈诚 还有，希望您向小姐保密这一切，不然不知道她会做出什么事
+
+后面，陈诚又说了几句客套话，便将我请出了房间
+
+我的身体从谈话的后半段就已经开始僵硬了
+
+家中的那个温柔的筱娅是魔女？
+
+照这样下去，我，会被杀掉？
 
 ![money](曙光的乐园/money.png)
