--- a/曙光的乐园(1).md
+++ b/曙光的乐园(1).md
@@ -1098,6 +1098,36 @@ CHOICE
 
 陈诚 关于已经被现代人遗忘的，某个魔女的存在
 # 17
+砰！
+
+重物重重砸到地面上，发出一阵沉闷的响声
+
+那东西滚了几圈，终于停下了
+
+曾今被人戏称是全宅邸最会耍怪的女仆，此刻永远的闭上了嘴
+
+那原本是脸的部位现在开了一个大洞，鲜红的血液混杂着组织从洞里汩汩的涌出
+
+旁边横七竖八地倒着类似的物体，偶尔能找到几具相对完好的，但大部分都已经被殴打的辨认不出形貌
+
+飞溅的血液混入地面的血池中，缓缓流向四周，将草地染的血红
+
+已经听不到求饶声，呼喊声，哭声，尖叫声
+
+十分钟前这些声音明明多到让人厌烦，现在却不复存在了
+
+只剩下单调沉闷的砍击声回荡在四周
+
+即便如此，她仍在不断地，不知疲倦地，永不停歇的挥动着那把巨大的柴刀
+
+仿佛这就是她存在的意义一般
+
+...
+
+......
+
+.........
+
 陈诚 大概70年前左右，白家刚发家那会儿吧，那时候的白家还是默默无名的小手艺坊，他们最开始从事的是人偶店，靠着演演人偶戏过日子，跟现在的白家感觉很不一样。
 
 陈诚 尽管没什么名气，但白家的人偶手艺可是真家伙，是白家世世代代传承下来的独门绝技
