--- a/曙光的乐园(1).md
+++ b/曙光的乐园(1).md
@@ -1308,4 +1308,51 @@ CHOICE
 
 照这样下去，我，会被杀掉？
 
+# 18
+
+白筱柊的不幸·其一
+
+白筱柊第一次发觉自己的家庭跟别人不同，是在她记事以来的第五年
+
+在此之前，她的生活范围仅局限在白家的宅邸，虽然偶尔可以通过窗子瞥见外头，但是只能看见连绵不断的绿色，和时不时传入耳中的奇妙叫声
+
+“那是鸟的叫声”宅邸中的仆人如此告诉她
+
+她通过网络检索得知了鸟的模样，鸟有很多种类，外形千差万别，也都有自己独特的叫声
+
+“原来如此”她这么想到，很快就记住了所有的鸟类，同时判断出经常在宅邸附近发出悦耳叫声的是百灵鸟。
+
+她被告知自己唯一的亲人是她的父亲，但她从记事起就很少见过他，更别提任何亲人之间的互动
+
+相比之下，宅邸的仆人们待她还更加和善，偶尔还会有人趁着闲时教她认识外面的世界，还教她使用网络检索知识
+
+这样的生活在第五年发生了些许变化
+
+那是一个外出选购的日子，仆人们会轮班外出采购所需的物资
+
+因为筱柊缠着要去外面看看，平时总忍不住溺爱她的女仆拗不过，只好同意悄悄把她带到了镇上
+
+在那里，她看到了牵着大人手的小孩开心的叫着“爸爸”，看到了和她差不多大的孩子们背着书包有说有笑的嬉闹着，看到了形形色色的人
+
+她能认出那是“书包”，是因为她曾检索过“学校”，得知书包是学生上学必备的工具，用来装课本和各种学习用具
+
+学校是学生上学的地方，在这里，她就能认识和她年纪相仿的朋友了吧
+
+她向对她很好的仆人表达了她想上学的想法，而仆人只是苦笑着摇摇头
+
+而这次，她学会了新的知识
+
+据说女孩都会向父亲撒娇，但她从来没干过，她决定试试
+
+于是，在一次她的父亲在家的时候，她抓住机会跑到父亲的面前，学着她看到的那个女孩的姿势抱着父亲的肩膀
+
+他预期父亲会露出开心的笑脸，然后轻轻摸摸她的头，就像她之前在街上看到的那样
+
+然而，父亲并没有露出笑容，相反，他脸色大变，粗暴地甩开了她的手，匆匆走开了
+
+第二天，那个偷偷把筱柊带出宅邸的女仆消失了
+
+她消失了之后，宅邸里的女仆对待筱柊态度也发生了巨大转变，筱柊向她们搭话也装作没听见，除了必要之时也不再和她说话
+
+于是，她回到了她的房间，锁上了房门，回到了她的禁闭生活
 ![money](曙光的乐园/money.png)
