--- a/曙光的乐园(1).md
+++ b/曙光的乐园(1).md
@@ -1355,4 +1355,25 @@ CHOICE
 她消失了之后，宅邸里的女仆对待筱柊态度也发生了巨大转变，筱柊向她们搭话也装作没听见，除了必要之时也不再和她说话
 
 于是，她回到了她的房间，锁上了房门，回到了她的禁闭生活
-![money](曙光的乐园/money.png)
+
+# 19
+
+见我沉默不语，陈诚无奈地苦笑着
+
+陈诚 专舟先生，为了你自己的人生安全考虑，你也应该与我们合作
+
+我所见过的筱雅，真的是陈诚口中的魔女吗
+
+陈诚 罢了，专舟你会感到犹豫这也很正常，毕竟谁又能相信这个世界存在这魔女呢？
+
+陈诚 一天以后，我希望能够听到专舟你的答复
+
+陈诚朝着出口走去，就要离开之际，他突然回头
+
+陈诚 最后给你一句忠告，魔女最擅长蛊惑人心，不能相信她所说的一切
+
+陈诚离开了，独留我一人苦恼
+
+专舟 一边是白家的叛徒，一边是蛊惑人心的魔女么？
+
+专舟 看来我得好好试探一下筱雅了
