--- a/曙光的乐园(1).md
+++ b/曙光的乐园(1).md
@@ -1420,7 +1420,7 @@ CHOICE
 
 专舟 实在抱歉，昨晚没睡好所以工作有点没精神，明天一定注意
 
-筱娅转头看了我一眼，那宛如无机质般的冰冷眼眸仿佛要贯穿我一般
+筱柊转头看了我一眼，那宛如无机质般的冰冷眼眸仿佛要贯穿我一般
 
 随后她又回头摆弄她的电脑，不再理会我，我趁机溜出了房间
 
@@ -1436,4 +1436,6 @@ CHOICE
 
 如果她是魔女，那真是太悲伤了
 
-11111111
+# 20
+
+我刚到门口，就闻到一股香味从屋内飘来
