--- a/曙光的乐园(1).md
+++ b/曙光的乐园(1).md
@@ -1362,7 +1362,7 @@ CHOICE
 
 陈诚 专舟先生，为了你自己的人生安全考虑，你也应该与我们合作
 
-我所见过的筱雅，真的是陈诚口中的魔女吗
+我所见过的筱柊，真的是陈诚口中的魔女吗
 
 陈诚 罢了，专舟你会感到犹豫这也很正常，毕竟谁又能相信这个世界存在这魔女呢？
 
@@ -1376,4 +1376,4 @@ CHOICE
 
 专舟 一边是白家的叛徒，一边是蛊惑人心的魔女么？
 
-专舟 看来我得好好试探一下筱雅了
+专舟 看来我得好好试探一下筱柊了
