--- a/曙光的乐园(1).md
+++ b/曙光的乐园(1).md
@@ -1439,3 +1439,44 @@ CHOICE
 # 20
 
 我刚到门口，就闻到一股香味从屋内飘来
+
+# 回归01
+
+咔嚓……
+
+眼前的世界犹如玻璃般破碎，随之而来的是撕裂脑子的剧痛。
+
+……
+
+？？ 小子，快醒醒！
+
+这是……蛇的声音？我的意识逐渐回归。
+
+我揉了揉脑袋，看向我手中紧握的“衔尾蛇”卡牌，向其询问道。
+
+白晓 刚刚发生了什么
+
+蛇 恭喜你，总算从那女人的记忆幻境中逃了出来。你若是能早点摆脱专舟的身份，也就不会像之前那样差点出不来了
+
+白筱柊，不，应该说是“芙兰”的记忆幻境。在里面，我以“专舟”的身份与芙兰共度了一段时光，也对她有了更深的了解
+
+白晓 那么，在那之后，我是说专舟死了之后，又发生了什么事，过去欣欣向荣的社会又是怎么突然倾覆了
+
+蛇 哼，那女人已经疯了，一心想着创造出像她那样或是比她更强的“神”，末世的到来也是她一手造就的，就为了方便她的研究罢了
+
+白晓 难道我们就没有办法劝她回心转意吗，就记忆幻境中我所经历的，芙兰绝对不是那种不讲情理的人
+
+蛇 （冷笑）那你就更应该明白，那女人到底有多顽固。她能够将自己最后的“人性”弃置于此，难道还不能说明她的决心吗？你再好好看看周围吧！
+
+周围，是堆积如山的，破碎的人偶，也是“白晓”。终焉之地……我的脑子忽然闪过一道道画面，死亡的恐惧溢进了我的大脑。
+
+白晓 那是……那些画面，都是真的？
+
+蛇 不错，这便是身为“白晓”的我们，最后的宿命。被榨干所有的价值之后，如同蛆一般被丢进这终焉之地，彻底成为神明诞生的养料。如果你不想接受这既定的命运，就该和我，和野兽大人一起，向那该死的神明举起长矛！那位大人已经来了，现在轮到你做出你最后的决定了。
+
+我将视线投向远处。一位不怒自威的老者，正用锐利的眼神盯着我。“野兽”没有说话。但我知道，他在等待我的答复。
+
+CHOICE
+
+1. 野兽和蛇值得信任
+2. 无论如何，我都得先和芙兰谈一谈
