购物篇开头

--- a/曙光的乐园(1).md
+++ b/曙光的乐园(1).md
@@ -1306,6 +1306,8 @@ CHOICE
 
 陈诚 还有，希望您向小姐保密这一切，不然不知道她会做出什么事
 
+陈诚 最后，传说魔女的身上会印有衔尾蛇的标记，请您多加留意
+
 后面，陈诚又说了几句客套话，便将我请出了房间
 
 我的身体从谈话的后半段就已经开始僵硬了
@@ -1438,7 +1440,117 @@ CHOICE
 
 # 20
 
-我刚到门口，就闻到一股香味从屋内飘来
+我刚推开自家的门，就闻到一股肉香味从屋内飘来
+
+筱柊正一边切着胡萝卜一边轻轻哼着歌，锅里好像在炖着排骨，香气就是从这传出来的吧
+
+专舟 嗨，筱柊，我回来了，要帮忙吗
+
+筱柊 啊专舟你回来了，没事，交给我吧，你先休息休息
+
+筱柊一边说话，一边干练地将切好的萝卜倒进锅中翻炒
+
+我想起了自己蹩脚的不行的厨艺，于是决定听从她的好意
+
+待会帮忙收拾吧
+
+等了差不多20分钟，筱柊收工了，一整桌的菜色香味俱全，令人食指大动
+
+我迫不及待尝了一口这道家炒土豆丝
+
+嗯~~~，土豆炒熟后的软濡感配合更有嚼劲的胡萝卜丝，还有这个炖排骨的汤，醇厚香浓，太棒了
+
+专舟 真是太好吃了！！！谢谢你筱柊！
+
+筱柊看着我吃的这么开心，她的嘴角也不禁上扬
+
+筱柊 呵呵，合你的口味就好
+
+专舟 话说，这些菜你是去外面买的吗，我记得冰箱里好像空空如也了
+
+筱柊 ......是的，我看家里没食材了，又怕用手机点外卖会被陈诚监听，因此稍稍乔装了一下去了趟市场
+
+筱柊 我很小心，应该没被发现
+
+说着，筱柊指了指旁边的衣服帽子，应该是她换装用过的
+
+等等，也就是说被美少女穿过的，还没洗的，我的衣服，现在正放在沙发上！
+
+专舟 嘿嘿嘿
+
+筱柊 嗯？专舟，你怎么了？
+
+专舟 哈！？
+
+我猛的回过神，不对，该说正事了
+
+专舟 话说回来，我今天在白家
+
+筱柊听到“白家”二字，神情立马严肃了起来
+
+筱柊 他们没对你怎么样吧
+
+我把今天发生的事，包括和陈诚的谈话和筱柊复述了一遍
+
+专舟 筱柊，关于这个白家的往事，你知道吗
+
+筱柊一脸茫然地摇摇头
+
+筱柊 这种事我还是第一次听说，白家的背后还有这样的故事
+
+筱柊 这一定都是陈诚瞎编的，怎么会有这么超自然的事情发生
+
+专舟 但是，两个筱柊确实存在，那个白家宅邸中的筱柊，和你完全不同
+
+筱柊的脸顿时变得煞白
+
+筱柊 专舟，请你相信我，我绝对不是什么魔女！我只是想躲避她们的追捕！
+
+筱柊 对了，他不是说魔女身上会有衔尾蛇的印记吗，我这就向你证明我不是魔女
+
+说着筱柊就要解开衣服，我赶紧阻止了他
+
+专舟 等等等等，是我说话不加考虑了，我没有怀疑你，真的，像你这么温柔贤惠的女生怎么会是魔女呢
+
+是啊，怎么可能呢
+
+一边做饭一边轻轻哼歌，为了买食材而稍稍冒险，因为自己的菜被夸奖了而开心
+
+谁家的魔女会这么少女
+
+专舟 白家宅邸中的筱柊非常高冷，而你如此平易近人，除了外表一模一样之外我真的找不到任何共通点了
+
+专舟 感觉真要说起来，她更像魔女
+
+专舟 没事的，吃饭吧
+
+听了我这么说，筱柊似乎松了口气，又坐回了饭桌上吃起了饭，眼角垂着一丝泪滴
+
+筱柊 专舟，谢谢你相信我
+
+说完，她抬起头向我绽放了一个感激的笑容
+
+啊，我一定要保护这个女孩
+
+什么魔女，简直是无稽之谈
+
+我们吃完了饭，又聊了会天，就早早睡觉了
+
+漫长的一天终于结束了
+
+# 21
+
+今天是周日，白家管家来电话说今天小姐不在家，所以放假一天
+
+说起来筱柊在家用的都是我的衣服和生活用品，是时候给她买新的了
+
+于是，今天的预定就定为外出购物了
+
+当然，为了避免被陈诚发现，筱柊仔细地乔装了一番
+
+她收起长发卷在了头顶上，用帽子遮住，穿着男款的休闲和短裤
+
+多亏了某个部位的小巧玲珑，她看起来毫无违和感
 
 # 回归01
 
