前面文段的小量修改，让陈诚跟筱柊的言论更符合大纲逻辑

--- a/曙光的乐园(1).md
+++ b/曙光的乐园(1).md
@@ -1494,19 +1494,23 @@ CHOICE
 
 专舟 筱柊，关于这个白家的往事，你知道吗
 
-筱柊一脸茫然地摇摇头
+筱柊的脸沉了下来
 
-筱柊 这种事我还是第一次听说，白家的背后还有这样的故事
+筱柊 这个事情，我以前也有所耳闻，但结局完全不同
 
-筱柊 这一定都是陈诚瞎编的，怎么会有这么超自然的事情发生
+筱柊 我知道的版本是，魔女混在仆人中显现，曾爷爷向他献出了卡片，魔女便消失了，没有任何的流血事件
+
+筱柊 包括她变成奶奶的样子这件事，我从来没有听说
+
+筱柊 不管事实如何，陈诚一定添油加醋了，不能信他的话
 
 专舟 但是，两个筱柊确实存在，那个白家宅邸中的筱柊，和你完全不同
 
-筱柊的脸顿时变得煞白
+筱柊 但是专舟，请你相信我，我绝对不是什么魔女
 
-筱柊 专舟，请你相信我，我绝对不是什么魔女！我只是想躲避她们的追捕！
+筱柊 对了，他不是说魔女身上会有衔尾蛇的印记吗，就算他说的是真的，魔女一定是宅邸里的那个东西
 
-筱柊 对了，他不是说魔女身上会有衔尾蛇的印记吗，我这就向你证明我不是魔女
+筱柊 你要是不信，我现在就能向你证明
 
 说着筱柊就要解开衣服，我赶紧阻止了他
 
@@ -1520,11 +1524,19 @@ CHOICE
 
 专舟 白家宅邸中的筱柊非常高冷，而你如此平易近人，除了外表一模一样之外我真的找不到任何共通点了
 
-专舟 感觉真要说起来，她更像魔女
+专舟 感觉真要说起来，她确实更像魔女
 
 专舟 没事的，吃饭吧
 
-听了我这么说，筱柊似乎松了口气，又坐回了饭桌上吃起了饭，眼角垂着一丝泪滴
+听了我这么说，筱柊似乎松了口气，又坐回了饭桌上吃起了饭
+
+接下来很长一段时间，没有人再开口
+
+啊嘞，难道是我把气氛搞砸了？
+
+都怪我不过脑子的发言让筱柊听起来像是在怀疑她，这下糟了
+
+又过了一会儿，她似乎吃得差不多了，于是她摆正碗筷，仿佛下定决心般抬头看着我
 
 筱柊 专舟，谢谢你相信我
 
