--- a/曙光的乐园(1).md
+++ b/曙光的乐园(1).md
@@ -1604,3 +1604,21 @@ CHOICE
 
 1. 野兽和蛇值得信任
 2. 无论如何，我都得先和芙兰谈一谈
+
+# 回归02
+
+这个问题的答案还需要想吗？！虽然和芙兰相处的时间不长，但无论如何我都要当面找到她了解事情的原委。
+
+白晓 （深吸一口气）抱歉，我还有必须要去做的事情，不能和你们一起同行了。
+
+蛇 你是傻瓜吗？现在还执迷不悟吗，别忘了现在外面可是还有一个“白晓”，你现在早就成为这世界的弃子了。
+
+野兽却是摆了摆手。
+
+野兽 无妨。既然他不愿与我们为伍，那就随他去吧。眼下最关键的还是确保相克的成功。
+
+野兽探出手，我手中的“衔尾蛇”卡牌迅速朝他飞去。
+
+野兽 小子，既然你有自己的目标，那就尝试自己走出这个“墓场”吧
+
+野兽带着卡牌，身躯化为泡影，原地消失了。
