--- a/曙光的乐园(1).md
+++ b/曙光的乐园(1).md
@@ -1602,7 +1602,7 @@ CHOICE
 
 筱柊 萝莉的表现形式吗？
 
-专舟 ......你刚才说了什么吗
+专舟 ......你刚才说了什么吗?
 
 筱柊 什么都没说哦?
 
@@ -1613,6 +1613,7 @@ CHOICE
 后面还有大把的时间传教
 
 我们离开了谷子店
+
 # 回归01
 
 咔嚓……
