--- a/曙光的乐园(1).md
+++ b/曙光的乐园(1).md
@@ -307,8 +307,30 @@ CHOICE
 当我在机器里躺好后，在外的芙兰按下了机器侧身的一个按钮，随即机器的外盖开始落下，直至完全严丝闭合为止。与此同时，一个类似于锅盖的仪器从我脑袋的后侧上方的位置探出，慢慢向我伸来，最后套在了我的头上。我只感觉到伴随着一阵难以描述的吸力，我的意识开始模糊……
 
 ……
+<!-- 4.黑客社的日常任务是接受周围居民的委托，处理网络的错误，通过顺着网线打怪的方式（为了构建羁绊，这里需要两到三段比较长的日常丰富人物性格，为后面作铺垫，打怪的方式应当更具体（类似冷兵器对抗？有类似魔法的虚拟能力？）） -->
 
-“喂，能听到我说话吗？”芙兰的声音在我耳边回荡，我猛地睁开了双眼，发现自己正身处在一片奇异的空间中：我脚下的是一条狭窄的透明的道路，发着淡淡的光芒，一直延伸到远方的黑暗中，而道路的两旁，则是幽暗的深渊，以及悬浮在半空中的数之不尽的0和1。
+<!-- 5.李越试图用网络病毒从外部入侵芙兰的机体，但是始终不成功 -->
+
+在一个幽暗狭窄的密室中，一个戴着单片眼镜的老者，攥紧了拳头，死死盯着眼前的屏幕。
+
+如果白晓在此处的话，就会惊觉此人的身份————智睿大学的校长李越。
+
+不过，此处的李越远比白晓所见到的更加暮气沉沉。
+
+李越 “98%，99%，快了……这次一定要成功啊”
+
+然而，就在进度条到达百分之百时，红色的ERROR信息蜂拥而至，瞬间挤占了整个屏幕。
+
+刹那间，李越仿佛被抽干了全身的精气神，就好像又衰老了十岁。
+
+李越 “该死，就是这样的网络病毒也没法突破防火墙吗，你可真是造出了一个坚不可摧的乐园啊！”
+
+说完，李越将目光投向了密室的中央————
+
+那是一个巨大的圆筒形培养舱，一个蜷缩着身子，静静地漂浮在培养液中。她戴着一顶奇异的头盔，头盔顶部又延伸出一条软管，连通至培养舱顶部，直至天花板，也不知最终通向何处。
+
+李越 “呵，看来我在外界的肉体也快到达极限了，没想到我最后也只能像白知瑞一样吗？现如今也只能把希望寄托在‘木马’计划上了，志豪，你可不要让我失望啊。”
+<!-- “喂，能听到我说话吗？”芙兰的声音在我耳边回荡，我猛地睁开了双眼，发现自己正身处在一片奇异的空间中：我脚下的是一条狭窄的透明的道路，发着淡淡的光芒，一直延伸到远方的黑暗中，而道路的两旁，则是幽暗的深渊，以及悬浮在半空中的数之不尽的0和1。
 
 “喂，能听到我说话吗？”芙兰的声音再一次响起，“这小子难道现在都还没醒吗？”
 
@@ -652,7 +674,7 @@ CHOICE
 
 “我都放你在少年身上的分身进去了，你还有什么好担心的？野兽只是叫你盯着那个少年，分身盯着也是盯着，不是吗？好了，我要回去了。”亚伯的身旁又出现了一道虚幻的门。
 
-蛇则是凝视着亚伯走进了传送门。“真走了，亚伯这家伙，难道……”（13）
+蛇则是凝视着亚伯走进了传送门。“真走了，亚伯这家伙，难道……”（13） -->
 
 `<a id="section13"></a>`
 
