--- a/剧本相关讨论.md
+++ b/剧本相关讨论.md
@@ -7,6 +7,7 @@
 
    - 李越的目标不明确：是抓芙兰、破坏数据、打病毒，还是控制乐园？
    - 芙兰的定位模糊：作为分身/小号，其与大号（本体）的关系、战力、记忆机制未统一，导致其被动“被抢”缺乏说服力。
+      - 修正：去掉分身设定，让本体直接作为芙兰参与主角团，背叛戏修正为芙兰使用权限试图删除李越和志豪的账号并格式化这一空间，但受到李越在制造芙兰初期塞进去的零件干扰导致丧失了对backup的访问权限，并且使原型机的地址暴露出来。
    - 志豪的背叛时机与动机牵强，与剧情节奏（如打怪、反水、芙兰被抓）不协调。
 3. **剧情推进与战力体系**：
 
@@ -20,3 +21,4 @@
 
    - “病毒”具体表现形式未定义，与其对剧情（如NPC丧尸化、意识操控）的影响脱节。
    - 李越是否成功抓走芙兰、主角如何应对、决战阶段如何展开等问题未达成一致，导致剧情走向模糊。
+
