--- a/剧本相关讨论.md
+++ b/剧本相关讨论.md
@@ -1,4 +1,3 @@
-
 1. **世界观设定与逻辑一致性**：
 
    - 对“往生地”与“乐园”的编码器/解码器比喻存在理解分歧，导致对角色行为（如李越入侵、NPC机制）的解释混乱。
@@ -6,19 +5,26 @@
 2. **角色动机与行为合理性**：
 
    - 李越的目标不明确：是抓芙兰、破坏数据、打病毒，还是控制乐园？
+     - 抓住芙兰，打入病毒从而夺取管理员权限，掌控乐园。
    - 芙兰的定位模糊：作为分身/小号，其与大号（本体）的关系、战力、记忆机制未统一，导致其被动“被抢”缺乏说服力。
-      - 修正：去掉分身设定，让本体直接作为芙兰参与主角团，背叛戏修正为芙兰使用权限试图删除李越和志豪的账号并格式化这一空间，但受到李越在制造芙兰初期塞进去的零件干扰导致丧失了对backup的访问权限，并且使原型机的地址暴露出来。
+     - 修正：去掉分身设定，让本体直接作为芙兰参与主角团，背叛戏修正为芙兰使用权限试图删除李越和志豪的账号并格式化这一空间，但受到李越在制造芙兰初期塞进去的零件干扰导致丧失了对public的访问权限，并且使原型机的地址暴露出来。
    - 志豪的背叛时机与动机牵强，与剧情节奏（如打怪、反水、芙兰被抓）不协调。
+     - 并非
 3. **剧情推进与战力体系**：
 
    - 大号（本体）是否下场干预、其战力与权限设定未明确，导致关键时刻（如芙兰遇险）缺乏合理反应。
+     - 去掉复制人设定，本体一直参与，只是在日常任务中不使用权限，以一般身份参与活动。
    - 虚拟世界的战力体系（权限、数据、装备）未系统化，造成角色强弱解释随意（如“权限狗打不过挂哥”）。
+     - 如 2.2 解释，让芙兰由于某个原因无法随意使用权限即可。同时，为了防止李越因反复登出可能造成的“拔网线”操作，将芙兰离场遗言修改为“禁止登出”，将舞台限制在乐园。
 4. **叙事焦点与工具人角色**：
 
    - 芙兰沦为被抢夺的“工具人”，缺乏主动塑造，其失忆、恢复、自尽等情节显得突兀。
+     - 加入离场遗言使出现和离场变得有意义。
    - 大号作为背景板与分身之间的切换机制（如“换号”）未有效融入剧情，显得生硬。
+     - 如上解释
 5. **细节缺失与后续发展矛盾**：
 
    - “病毒”具体表现形式未定义，与其对剧情（如NPC丧尸化、意识操控）的影响脱节。
+     - 待议，目前的想法是意识操控丧尸化或某种出现在乐园中的怪物（亦或是网络空间中的怪出现在现实空间等等），可以在夺取芙兰部分让李越获得部分权限从而为决战做伏笔
    - 李越是否成功抓走芙兰、主角如何应对、决战阶段如何展开等问题未达成一致，导致剧情走向模糊。
-
+     - 没有成功抓走，决战可以在主角团营救芙兰成功后，说主角团回到乐园发现异变开始
