--- a/剧本相关讨论.md
+++ b/剧本相关讨论.md
@@ -1,7 +1,9 @@
 1. **世界观设定与逻辑一致性**：
 
    - 对“往生地”与“乐园”的编码器/解码器比喻存在理解分歧，导致对角色行为（如李越入侵、NPC机制）的解释混乱。
+     - 往生地就是原型机，可以理解为背后的数据库，储存着所有用户的账号，管理员可以通过访问这里实现对某个账号的定位和修改，一般用户无法访问。
    - “复制世界隔开李越”与“李越黑入并打洞”之间的逻辑冲突，缺乏合理的系统安全设定。
+     - 背叛戏中芙兰暴露原型机地址，给予李越黑入机会。芙兰失去微观操作的权限选择复制世界来争取时间。
 2. **角色动机与行为合理性**：
 
    - 李越的目标不明确：是抓芙兰、破坏数据、打病毒，还是控制乐园？
